--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "datatables.net-dt": "^1.10.23",
         "dropzone": "^5.7.2",
         "jquery": "^3.5.1",
+        "jquery-datetimepicker": "^2.5.21",
         "moment": "^2.29.1",
         "select2": "^4.0.13",
         "select2-bootstrap4-theme": "^1.0.0",
